# fast-nnt

./: .gitignore  CITATION.cff  Cargo.toml  README.md  RELEASING.md  build_and_install.sh  release.sh
.github/workflows/: ci.yml  python_release.yml
anon-nnt-py/: Cargo.toml  pyproject.toml
anon-nnt-py/src/: lib.rs
anonnntr/: .gitignore  DESCRIPTION  NAMESPACE
anonnntr/R/: exports.R  extendr-wrappers.R
anonnntr/man/: run_neighbornet_networkx.Rd  run_neighbournet_networkx.Rd  set_anon_nnt_threads.Rd
anonnntr/notes/: building.txt
anonnntr/src/: Makevars.in  Makevars.win.in  anonnntr-win.def  entrypoint.c
anonnntr/src/rust/: Cargo.toml
anonnntr/src/rust/src/: lib.rs
benches/: least_squares_fit.rs  nnls.rs  ordering_huson2023.rs  ordering_matrix.rs  ordering_splitstree4.rs  splitstree4_weights.rs
fastnnt-py/: Cargo.toml  pyproject.toml
fastnnt-py/src/: lib.rs
fastnnt-py/tests/: conftest.py  test_run_neighbour_net.py
fastnnt-r/: Cargo.toml
fastnntr/: Cargo.toml  DESCRIPTION  NAMESPACE
fastnntr/R/: exports.R  extendr-wrappers.R
fastnntr/man/: run_neighbornet_networkx.Rd  run_neighbournet_networkx.Rd  set_fastnnt_threads.Rd
fastnntr/src/: .gitignore  Makevars.in  Makevars.win.in  entrypoint.c  fastnntr-win.def  lib.rs
fastnntr/src/rust/: Cargo.toml
fastnntr/src/rust/src/: lib.rs
fastnntr/tests/: testthat.R
fastnntr/tests/testthat/: helper-fixtures.R  test-input.R  test-networx.R  test-nexus-io.R
fastnntr/vignettes/: fastnntr-vignette.Rmd
src/: cli.rs  lib.rs  test_helpers.rs  utils.rs
src/algorithms/: convex_hull.rs  equal_angle.rs  mod.rs
src/data/: mod.rs  splits_blocks.rs
src/neighbour_net/: mod.rs  neighbour_net.rs
src/nexus/: mod.rs  network_writer.rs  nexus.rs  nexus_writer.rs
src/ordering/: mod.rs  ordering_graph.rs  ordering_huson2023.rs  ordering_matrix.rs  ordering_splitstree4.rs
src/phylo/: mod.rs  phylo_graph.rs  phylo_splits_graph.rs
src/splits/: asplit.rs  bipartition.rs  mod.rs
src/weights/: active_set_weights.rs  band.rs  mod.rs  splitstree4_weights.rs
test/data/: large_dist_matrix.csv
test/data/large/: euc_huson2023.nex  euc_splitstree4.nex  large_dist_matrix.csv  large_full.nex  splitstree6_test.nex  st6_huson2023.stree6
test/data/medium_20/: symmetric_20x20_no_row_labels.csv
test/data/medium_30/: symmetric_30x30.csv
test/data/small_10/: small_10_1.csv  small_10_2.csv  splitstree_small_10_2.nexus  splitstree_small_10_2.stree6
test/data/small_5/: small_5_1.csv
test/python/: benchmark_threads.py  fastnnt_threads_benchmark.csv  large_test.py  small_10_1.py
test/r/: anon_nnt_threads_benchmark.csv  benchmark_threads.R  large_test.R  nice_plots.R
