[package]
name = "fast-nnt"
version = "0.1.0"
edition = "2024"
authors = ["Rhys Newell <rhys.newell94@gmail.com>"]
description = "Rust implementation of the SplitsTree NeighborNet algorithm."
documentation = "https://docs.rs/fast-nnt"
readme = "README.md"
repository = "https://github.com/rhysnewell/fast-nnt"
license = "GPL-3.0"
keywords = ["phylogenetics", "neighbor-net", "splits-tree", "trees", "networks"]
default-run = "fast_nnt"

# [workspace]
# members = ["fastnnt-py", "fastnntr"]

resolver = "2"

[dependencies]
anyhow = "1.0.99"
clap = { version="4.5", features = ["cargo", "derive"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.11"
petgraph = "0.8.2"
fixedbitset = "0.5.7"
env_logger = "0.11.8"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.1"
sysinfo = "0.37.0"
num_cpus = "1.17.0"
libc = "0.2.175"


[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"   # optional, nicer diffs
