[package]
name = "anon_nnt"
version = "0.2.4"
edition = "2024"
authors = ["Anonymous"]
description = "Anonymous implementation of a NeighborNet-style algorithm."
documentation = "https://example.invalid"
readme = "README.md"
repository = "https://example.invalid"
license = "GPL-3.0"
keywords = ["phylogenetics", "neighbor-net", "splits-tree", "trees", "networks"]
default-run = "anon_nnt"

# [workspace]
# members = ["anon-nnt-py", "anonnntr"]

resolver = "2"

[dependencies]
anyhow = "1.0.99"
clap = { version="4.5", features = ["cargo", "derive"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.11"
petgraph = "0.8.2"
fixedbitset = "0.5.7"
env_logger = "0.11.8"
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.1"
sysinfo = "0.37.0"
num_cpus = "1.17.0"
libc = "0.2.175"


[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"   # optional, nicer diffs
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "ordering_splitstree4"
harness = false

[[bench]]
name = "ordering_huson2023"
harness = false

[[bench]]
name = "nnls"
harness = false

[[bench]]
name = "least_squares_fit"
harness = false

[[bench]]
name = "ordering_matrix"
harness = false

[[bin]]
name = "anon_nnt"
path = "src/bin/anon_nnt.rs"
