[package]
name = "anon-nnt-py"
publish = false
version = "0.2.5"
edition = "2024"

[lib]
name = "anon_nntpy"              # Python import name: anon_nntpy
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
ndarray = "0.16.1"
anyhow = "1"
anon-nnt = ">=0.2.5"

[patch.crates-io]
anon-nnt = { path = ".." }
