[package]
name = "fastnnt-py"
publish = false
version = "0.2.3"
edition = "2024"

[lib]
name = "fastnntpy"              # Python import name: fastnntpy
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
ndarray = "0.16.1"
anyhow = "1"
fast-nnt = ">=0.2.3"

[patch.crates-io]
fast-nnt = { path = ".." }
