[package]
name = "fastnnt-py"
publish = false
version = "0.2.5"
edition = "2024"

[lib]
name = "fastnntpy"              # Python import name: fastnntpy
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
ndarray = "0.16.1"
anyhow = "1"
fast-nnt = ">=0.2.5"

# Build against the published `fast-nnt` crate by default (matches fastnntr and
# the release model: core is published first, then the bindings are updated).
# Uncomment to test the bindings against unpublished local core changes.
# [patch.crates-io]
# fast-nnt = { path = ".." }
