[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "fastnntpy"
version = "0.2.0"
requires-python = ">=3.9"
description = "Fast NeighborNet (Rust) with Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rhys Newell", email = "rhys.newell94@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rhysnewell/fast-nnt"

# Optional runtime deps for helper Python code (not for the Rust extension itself)
[project.optional-dependencies]
plot = ["networkx>=3", "matplotlib>=3", "pandas>=1.5"]

# maturin options
[tool.maturin]
# This is the Python import module name; must match [lib].name in Cargo.toml
module-name = "fastnntpy"
