[package]
name = 'anonnntr'
publish = false
version = '0.2.4'
edition = '2024'

[lib]
crate-type = [ 'staticlib' ]
name = 'anonnntr'

[dependencies]
extendr-api = '0.8.1'
ndarray = "0.16.1"
anyhow = "1"
anon_nnt = ">=0.2.4"

[patch.crates-io]
anon_nnt = { path = "../../.." }

[profile.release]
lto = true
codegen-units = 1
