[package]
name = 'anonnntr'
publish = false
version = '0.2.5'
edition = '2024'

[lib]
crate-type = [ 'staticlib' ]
name = 'anonnntr'

[dependencies]
extendr-api = '0.8.1'
ndarray = "0.16.1"
anyhow = "1"
anon-nnt = ">=0.2.5"

[patch.crates-io]
anon-nnt = { path = "../../.." }

[profile.release]
lto = true
codegen-units = 1
