[package]
name = 'fastnntr'
publish = false
version = '0.2.4'
edition = '2024'

[lib]
crate-type = [ 'staticlib' ]
name = 'fastnntr'

[dependencies]
extendr-api = '0.8.1'
ndarray = "0.16.1"
anyhow = "1"
fast-nnt = ">=0.2.4"

# [patch.crates-io]
# fast-nnt = { path = "../../.." }

[profile.release]
lto = true
codegen-units = 1
